[package]
name = "dao-factory"
version = "0.1.0"
authors = ["hanshaoxin <hanshaoxin@corp-ci.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
#c123chain-cdk = { tag = "v0.0.13", git = "https://github.com/ci123chain/ci123chain-cdk"}
c123chain-cdk = { path = "../../ci123chain-cdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true