[package]
name = "example"
version = "0.1.0"
authors = ["tanhui <tanhui@corp-ci.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
c123chain-cdk = { tag = "v0.0.15", git = "https://github.com/ci123chain/ci123chain-cdk"}
# c123chain-cdk = { path = "../../rust-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.1"

[profile.release]
opt-level = "s"
lto = true